Úprava stylů a struktury CSS, změna písma a přidání hlášení o zastaralosti webu

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
     <title>Adam Klement</title>
 
     <meta name="description" content="Adam Klement - UI/UX designer, frontend developer a počítačový nerd.">
@@ -35,28 +34,20 @@
 
 <body>
     <nav class="navbar navbar-expand-md d-none d-md-block animate__animated animate__fadeInUp">
-        <div class="container-fluid">
-            <a href="/" class="btn btn-primary py-3 px-3"><i class="ph-fill ph-house"></i> Hlavní stránka</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse ms-2" id="navbarSupportedContent">
-                <ul class="navbar-links">
-                    <li class="nav-item">
-                        <a class="nav-link btn" aria-current="page" href="/#o-mne"><i class="ph-fill ph-hand-waving"></i> O
-                            mně</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn" href="/#portfolio"><i class="ph-fill ph-arrow-up-right"></i> Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn" href="/linktree"><i class="ph-bold ph-link"></i> Odkazy</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+      <ul class="navbar-links">
+          <li class="nav-item">
+              <a class="nav-link btn" aria-current="page" href="/"><i class="ph ph-house"></i></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link btn" aria-current="page" href="/#o-mne"><i class="ph ph-user-circle"></i></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link btn" href="/#portfolio"><i class="ph ph-blueprint"></i></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link btn" href="/linktree"><i class="ph ph-linktree-logo"></i></a>
+          </li>
+      </ul>
     </nav>
 
     <nav class="navbar navbar-expand d-md-none animate__animated animate__fadeInUp">
@@ -89,8 +80,14 @@
     </div>
 
     <div class="container py-5">
+        <div class="alert alert-info mb-5 animate__animated animate__fadeInDown wow d-flex align-items-center gap-2">
+            <i class="ph ph-info fs-5"></i>
+            <div>
+              Sorry, tahle webovka je už moc stará a moc jí neudržuji. Připravuji si už novou, ať to není taková bída. <i class="ph ph-smiley-wink fs-5"></i>
+            </div>
+        </div>
         <h1 class="display-3 fw-bold animate__animated animate__fadeInDown wow" id="o-mne">Něco o mně 🤔</h1>
-        <p class="fs-4 animate__animated animate__fadeIn wow">Ahoj, jmenuji se Adam Klement a je mi 17 let. Mám rád všechno, co souvisí s designem a frontend developingem. Momentálně se věnuji grafice, UI/UX designu a také se zabývám vývojem webových stránek. Kromě školy mám několik mimoškolních aktivit, jako je například badminton a také se věnuji tvorbě grafiky a vedení projektu Let's Study, což je projekt zaměřený na pomoc s učením.
+        <p class="fs-4 animate__animated animate__fadeIn wow">Ahoj, jmenuji se Adam Klement a je mi 18 let. Mám rád všechno, co souvisí s designem a frontend developingem. Momentálně se věnuji grafice, UI/UX designu a také se zabývám vývojem webových stránek. Kromě školy mám několik mimoškolních aktivit, jako je například badminton a také se věnuji tvorbě grafiky a vedení projektu Let's Study, což je projekt zaměřený na pomoc s učením.
             <br><br>
             Momentálně pracuji na několika projektech, jako je <a href="https://lets-study.cz" target="_Blank">Let's Study</a> nebo <a href="https://barmy-production.eu" target="_Blank">Barmy Production</a> V oblasti grafiky mám již odpracováno přes 1000 hodin v programu Photoshop, což mě opravdu baví. S Adobe Xd mám více než 500 hodin zkušeností a také jsem strávil více než 2000 hodin prací v prostředí VSCODE. Doufám, že v budoucnu budu moci své zkušenosti dále rozvíjet a přinést další skvělé nápady do světa designu.
             <br><br>
