Přidání kontaktních informací a adresy sídla do index.html

--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
         </div>
     </div>
 
+    <div class="container py-5">
+      <p>Adam Klement</p>
+      <p>IČO: 22547614</p>
+      <p>DIČ: CZ22547614</p>
+      <p>Adresa sídla: Štúrova 282/13, 360 04, Karlovy Vary - Bohatice</p>
+      <p>Magistrát města Karlovy Vary</p>
+    </div>
+
     <footer class="container px-5 py-4 my-5 bg-white rounded-pill d-none d-lg-block animate__animated animate__fadeInUp wow">
         <div class="d-flex justify-content-between align-items-center">
             <div>
