Úprava textu v index.html pro přesnější popis živnostenského oprávnění

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <p>Adam Klement</p>
       <p>IČO: 22547614</p>
       <p>Adresa sídla: Štúrova 282/13, 360 04, Karlovy Vary - Bohatice</p>
-      <p>Magistrát města Karlovy Vary</p>
+      <p>Živnostenské oprávnění vydané Magistrátem města Karlovy Vary</p>
     </div>
 
     <footer class="container px-5 py-4 my-5 bg-white rounded-pill d-none d-lg-block animate__animated animate__fadeInUp wow">
